--- a/Dirty-talk.html
+++ b/Dirty-talk.html
@@ -62,7 +62,7 @@
     <div class="panel">
       <!-- Big background image (replace filename if needed) -->
       <div class="stage" id="stage">
-        <img id="bg" src="dirty-talk-stage.png" alt="Dirty Talk Stage">
+        <img id="bg" src="dirty-talk-stage.jpg" alt="Dirty Talk Stage">
         <div id="overlay" class="overlay" aria-hidden="true"></div>
       </div>
 
