--- a/Rizz-game.html
+++ b/Rizz-game.html
@@ -26,7 +26,7 @@
   .btn.ghost{background:transparent;border:1px solid rgba(255,255,255,.18)}
   .row{display:flex;gap:12px;flex-wrap:wrap;align-items:center} .hidden{display:none !important}
   label{font-size:12px;color:#e5e5e5;margin-bottom:6px;display:block}
-  input[type="text"],select,input[list]{width:100%;padding:12px 12px;border-radius:10px;border:1px solid rgba(255,255,255,.12);background:#111;color:#fff;outline:none;font-size:14px}
+  input[type="text"], input[type="number"], input[list]{width:100%;padding:12px 12px;border-radius:10px;border:1px solid rgba(255,255,255,.12);background:#111;color:#fff;outline:none;font-size:14px}
   .rec-wrap{background:linear-gradient(180deg,rgba(255,255,255,.02),rgba(255,255,255,.01));border:1px dashed rgba(255,255,255,.15);border-radius:14px;padding:16px}
   .record-btn{width:160px;height:160px;border-radius:999px;border:1px solid rgba(255,255,255,.15);cursor:pointer;background:radial-gradient(closest-side, rgba(225,191,120,.25) 0%, rgba(225,191,120,0) 78%),linear-gradient(180deg,#272727,#161616);color:#fff;font-weight:800;font-size:15px;letter-spacing:.5px;box-shadow:0 20px 60px rgba(0,0,0,.45),0 0 0 6px rgba(225,191,120,.08) inset}
   .rec-indicator{width:10px;height:10px;background:#f34a4a;border-radius:50%;box-shadow:0 0 12px rgba(243,74,74,.9);display:inline-block;margin-right:8px;vertical-align:middle;animation:pulse 1s infinite}
@@ -86,7 +86,7 @@
           <div class="row" style="align-items:center; justify-content:center; gap:18px; margin-bottom:12px">
             <button class="record-btn" id="recordBtn"><span id="recLabel">Start Recording</span></button>
             <div>
-              <div class="small">Tap once to start, tap again to stop. Keep it under 10s for best vibes.</div>
+              <div class="small">Tap once to start, tap again to stop. Keep it under 10s.</div>
               <div class="tip">Use HTTPS and allow mic permission.</div>
             </div>
           </div>
@@ -138,20 +138,20 @@
               <div class="overlay hidden"><div class="pill change">Change</div><div class="pill remove">✕</div></div>
             </div>
           </div>
-          <div class="tip">Previews appear instantly. You can change or remove any photo.</div>
+          <div class="tip">Previews appear instantly in the square you tapped.</div>
         </div>
+
         <div>
           <div class="grid cols-2">
             <div><label>Name</label><input type="text" id="name" placeholder="First name" autocomplete="name"></div>
-            <div><label>Age</label><select id="age"></select></div>
-            <div><label>Height</label><select id="height"></select></div>
-            <div><label>Gender</label><select id="gender"><option value="" selected disabled>Choose</option><option>Man</option><option>Woman</option><option>Other</option></select></div>
-            <div><label>I’m into</label><select id="into"><option value="" selected disabled>Choose</option><option>Men</option><option>Women</option><option>Both</option></select></div>
+            <div><label>Age</label><input type="number" id="ageInput" placeholder="e.g., 26" min="18" max="99" inputmode="numeric"></div>
+            <div><label>Height</label><input type="text" id="heightInput" placeholder="e.g., 5’7”" autocomplete="off"></div>
+            <div><label>Gender</label><input type="text" id="genderInput" placeholder="e.g., Woman" autocomplete="sex"></div>
+            <div><label>I’m into</label><input type="text" id="intoInput" placeholder="e.g., Men / Women / Both" autocomplete="off"></div>
 
-            <!-- changed to typeahead inputs with datalist -->
             <div>
               <label>Turn-on vocabulary</label>
-              <input list="vocabOptions" id="vocabInput" placeholder="Type or pick…"/>
+              <input list="vocabOptions" id="vocabInput" placeholder="Type or pick…" />
               <datalist id="vocabOptions">
                 <option value="Prefer not to say"></option>
                 <option value="Babe"></option><option value="Baby"></option><option value="Sexy"></option>
@@ -161,7 +161,7 @@
             </div>
             <div>
               <label>My type (looks)</label>
-              <input list="looksOptions" id="looksInput" placeholder="Type or pick…"/>
+              <input list="looksOptions" id="looksInput" placeholder="Type or pick…" />
               <datalist id="looksOptions">
                 <option value="Prefer not to say"></option>
                 <option value="Tall"></option><option value="Short"></option><option value="Thin"></option><option value="Curvy"></option><option value="Muscular"></option>
@@ -173,7 +173,7 @@
             </div>
             <div>
               <label>My type (personality)</label>
-              <input list="personalityOptions" id="personalityInput" placeholder="Type or pick…"/>
+              <input list="personalityOptions" id="personalityInput" placeholder="Type or pick…" />
               <datalist id="personalityOptions">
                 <option value="Prefer not to say"></option>
                 <option value="Funny"></option><option value="Smart"></option><option value="Playful"></option>
@@ -181,6 +181,7 @@
               </datalist>
             </div>
           </div>
+
           <div class="row" style="margin-top:14px">
             <button class="btn ghost" id="backToRecorder">← Back</button>
             <button class="btn gold" id="saveProfile">Save & Start Swiping →</button>
@@ -235,7 +236,7 @@
   import { app, db } from './firebase-config.js';
   import { getAuth, signInAnonymously, onAuthStateChanged } from 'https://www.gstatic.com/firebasejs/10.12.3/firebase-auth.js';
   import { getStorage, ref as sRef, uploadBytes, getDownloadURL } from 'https://www.gstatic.com/firebasejs/10.12.3/firebase-storage.js';
-  import { ref as rRef, set, update, get, onValue, push, serverTimestamp } from 'https://www.gstatic.com/firebasejs/10.12.3/firebase-database.js';
+  import { ref as rRef, set, get, onValue, push, serverTimestamp } from 'https://www.gstatic.com/firebasejs/10.12.3/firebase-database.js';
 
   const auth = getAuth(app);
   const storage = getStorage(app);
@@ -300,52 +301,75 @@
   retakeBtn.addEventListener('click', ()=>{ if(!audioEl.paused) audioEl.pause(); playerBlock.classList.add('hidden'); window.__recBlob=null; audioEl.removeAttribute('src'); });
   toProfileBtn.addEventListener('click', ()=>{ if(!window.__recBlob){ alert('Record your pickup line first.'); return; } go(1); });
 
-  /***** PROFILE BUILDER *****/
-  const ageSel = $('#age'), heightSel = $('#height');
-  (function buildAge(){ const frag=document.createDocumentFragment(); const ph=document.createElement('option'); ph.value=''; ph.textContent='Choose'; ph.disabled=true; ph.selected=true; frag.appendChild(ph); for(let a=18;a<=99;a++){ const o=document.createElement('option'); o.textContent=a; frag.appendChild(o);} ageSel.appendChild(frag);})();
-  (function buildHeight(){ const frag=document.createDocumentFragment(); const u=document.createElement('option'); u.textContent='Under 5 feet'; frag.appendChild(u); for(let f=5;f<=7;f++){ for(let i=0;i<12;i++){ const o=document.createElement('option'); o.textContent=`${f}’${i}”`; frag.appendChild(o);} } const o7=document.createElement('option'); o7.textContent='Over 7 feet'; frag.appendChild(o7); heightSel.appendChild(frag);})();
+  /***** PROFILE BUILDER — ALL FILL-IN-THE-BLANK *****/
   $('#backToRecorder').addEventListener('click', ()=> go(0));
 
-  // ===== PHOTO GRID (reliable previews with object URLs) =====
+  // ===== PHOTO GRID (resilient previews) =====
   const photoGrid = document.getElementById('photoGrid');
   const photoFiles = [null,null,null,null];
-  const photoURLs  = [null,null,null,null]; // object URLs for previews (revoke on change/remove)
+  const photoURLs  = [null,null,null,null]; // keep object URLs to revoke later
+
+  function setPreview(tile, idx, file){
+    // Clean previous URL
+    if (photoURLs[idx]) { try{ URL.revokeObjectURL(photoURLs[idx]); }catch(_){} photoURLs[idx]=null; }
+
+    let img = tile.querySelector('img');
+    if (!img) { img = document.createElement('img'); tile.appendChild(img); }
+
+    // Try object URL first
+    const tryObjectURL = () => {
+      const url = URL.createObjectURL(file);
+      photoURLs[idx] = url;
+      img.onload = () => { /* success */ };
+      img.onerror = () => { // fallback to FileReader
+        try{ URL.revokeObjectURL(url); }catch(_){}
+        photoURLs[idx]=null;
+        tryFileReader();
+      };
+      img.src = url;
+    };
+
+    const tryFileReader = () => {
+      const fr = new FileReader();
+      fr.onload = e => { img.src = e.target.result; };
+      fr.onerror = () => { alert('Could not preview this image. Try a different photo.'); };
+      fr.readAsDataURL(file);
+    };
+
+    tryObjectURL();
+
+    tile.querySelector('.hint')?.remove();
+    tile.querySelector('.overlay')?.classList.remove('hidden');
+  }
 
   photoGrid.querySelectorAll('.photo').forEach(tile=>{
     const input   = tile.querySelector('input[type="file"]');
     const overlay = tile.querySelector('.overlay');
     const idx     = +tile.dataset.idx;
 
+    // Open picker when tapping tile (don’t block defaults)
     tile.addEventListener('click', (e)=>{
       if (e.target.classList.contains('change') || e.target.classList.contains('remove')) return;
       input?.click();
     });
 
+    // Change / Input handlers
     const onPick = ()=>{
       const file = input.files && input.files[0];
       if (!file) return;
       photoFiles[idx] = file;
-
-      if (photoURLs[idx]) { URL.revokeObjectURL(photoURLs[idx]); photoURLs[idx] = null; }
-      const url = URL.createObjectURL(file);
-      photoURLs[idx] = url;
-
-      let img = tile.querySelector('img');
-      if (!img) { img = document.createElement('img'); tile.appendChild(img); }
-      img.src = url;
-
-      tile.querySelector('.hint')?.remove();
-      overlay.classList.remove('hidden');
+      setPreview(tile, idx, file);
     };
     input.addEventListener('change', onPick);
-    input.addEventListener('input',  onPick); // extra safety for some mobile browsers
+    input.addEventListener('input',  onPick);
 
+    // Overlay controls
     overlay.querySelector('.change').addEventListener('click', (e)=>{ e.stopPropagation(); input.click(); });
     overlay.querySelector('.remove').addEventListener('click', (e)=>{
       e.stopPropagation();
       photoFiles[idx] = null;
       input.value = '';
-      if (photoURLs[idx]) { URL.revokeObjectURL(photoURLs[idx]); photoURLs[idx] = null; }
+      if (photoURLs[idx]) { try{ URL.revokeObjectURL(photoURLs[idx]); }catch(_){} photoURLs[idx]=null; }
       tile.querySelector('img')?.remove();
       overlay.classList.add('hidden');
       if (!tile.querySelector('.hint')) {
@@ -364,10 +388,16 @@
     if(!currentUser){ alert('Connecting…'); return; }
     if(!window.__recBlob){ alert('Record your pickup line first.'); return; }
 
-    const required = { name: $('#name').value.trim(), age: $('#age').value, gender: $('#gender').value, into: $('#into').value };
+    const required = {
+      name: document.getElementById('name').value.trim(),
+      age:  document.getElementById('ageInput').value.trim(),
+      gender: document.getElementById('genderInput').value.trim(),
+      into: document.getElementById('intoInput').value.trim()
+    };
     if(!required.name || !required.age || !required.gender || !required.into){
       alert('Please complete Name, Age, Gender, and I’m into.'); return;
     }
+
     const btn = $('#saveProfile'); const old = btn.textContent; btn.disabled=true; btn.textContent='Saving…';
 
     try{
@@ -387,19 +417,17 @@
         uploadedPhotoURLs.push(await getDownloadURL(imgRef));
       }
 
-      // Gather text inputs (typeahead fields)
-      const vocab = document.getElementById('vocabInput').value || 'Prefer not to say';
-      const looks = document.getElementById('looksInput').value || 'Prefer not to say';
-      const personality = document.getElementById('personalityInput').value || 'Prefer not to say';
-
+      // Gather the rest (fill-in fields)
       const data = {
         uid: currentUser.uid,
         name: required.name,
         age: required.age,
-        height: document.getElementById('height').value || '',
+        height: document.getElementById('heightInput').value.trim(),
         gender: required.gender,
         into: required.into,
-        vocab, looks, personality,
+        vocab: document.getElementById('vocabInput').value.trim() || 'Prefer not to say',
+        looks: document.getElementById('looksInput').value.trim() || 'Prefer not to say',
+        personality: document.getElementById('personalityInput').value.trim() || 'Prefer not to say',
         photos: uploadedPhotoURLs,
         lineURL,
         ts: serverTimestamp()
@@ -453,13 +481,12 @@
     deckEl.appendChild(card);
 
     const audio=card.querySelector('audio'); audio.src=p.lineURL;
-    const playBtn=card.querySelector('play-toggle'.replace('play-','.') ); // play-toggle
-    const bar=card.querySelector('.bar'); const fill=card.querySelector('.fill'); const tm=card.querySelector('.time');
+    const playBtn=card.querySelector('.play-toggle'); const bar=card.querySelector('.bar'); const fill=card.querySelector('.fill'); const tm=card.querySelector('.time');
     const fmt=s=>{ s=Math.floor(s); const m=Math.floor(s/60), r=s%60; return `${m}:${r.toString().padStart(2,'0')}`; };
 
-    card.querySelector('.play-toggle').addEventListener('click', ()=>{ if(audio.paused){ audio.play(); card.querySelector('.play-toggle').textContent='⏸'; } else { audio.pause(); card.querySelector('.play-toggle').textContent='▶'; }});
-    audio.addEventListener('pause', ()=> card.querySelector('.play-toggle').textContent='▶');
-    audio.addEventListener('play',  ()=> card.querySelector('.play-toggle').textContent='⏸');
+    playBtn.addEventListener('click', ()=>{ if(audio.paused){ audio.play(); playBtn.textContent='⏸'; } else { audio.pause(); playBtn.textContent='▶'; }});
+    audio.addEventListener('pause', ()=> playBtn.textContent='▶');
+    audio.addEventListener('play',  ()=> playBtn.textContent='⏸');
     audio.addEventListener('timeupdate', ()=>{ const d=audio.duration||0, c=audio.currentTime||0, pct=d?(c/d)*100:0; fill.style.inset=`0 ${100-pct}% 0 0`; tm.textContent=`${fmt(c)} / ${d?fmt(d):'0:00'}`; });
     bar.addEventListener('click',(e)=>{ const r=bar.getBoundingClientRect(); const x=(e.clientX-r.left)/r.width; if(audio.duration) audio.currentTime=x*audio.duration; });
 
@@ -562,6 +589,7 @@
   });
 
   let chatRec=null, chatChunks=[], chatStream=null, chatMime='';
+  function supportedMime(){ const c=['audio/webm;codecs=opus','audio/mp4;codecs=aac','audio/webm','audio/ogg;codecs=opus','audio/mp4','audio/aac']; for(const t of c){ if(window.MediaRecorder?.isTypeSupported?.(t)) return t; } return ''; }
   $('#chatVoiceBtn').addEventListener('click', async (e)=>{
     const btn = e.currentTarget; const roomId = activeRoom; if(!roomId) return;
     if(!chatRec){
