--- a/Rizz-game.html
+++ b/Rizz-game.html
@@ -33,7 +33,7 @@
   .record-btn.recording{background:radial-gradient(closest-side, rgba(225,191,120,.25) 0%, rgba(225,191,120,0) 78%),linear-gradient(180deg,#272727,#161616)}
   .rec-indicator{width:10px;height:10px;background:#f34a4a;border-radius:50%;box-shadow:0 0 12px rgba(243,74,74,.9);display:inline-block;margin-right:8px;vertical-align:middle;animation:pulse 1s infinite}
   @keyframes pulse{0%{transform:scale(1);opacity:1}50%{transform:scale(1.3);opacity:.65}100%{transform:scale(1);opacity:1}}
-  .player{display:flex;align-items:center;gap:12px;margin-top:14px}
+  .player{display:flex;align-items:center;gap:12px;margin-top:14-ja14px}
   .play-toggle{width:46px;height:46px;border-radius:50%;border:1px solid rgba(255,255,255,.15);background:#151515;color:#fff;font-weight:800;cursor:pointer}
   .bar{flex:1;height:10px;background:#0f0f0f;border-radius:999px;position:relative;border:1px solid rgba(255,255,255,.1);overflow:hidden;cursor:pointer}
   .bar .fill{position:absolute;inset:0 100% 0 0;background:linear-gradient(90deg,var(--red),var(--blue),var(--green));border-right:2px solid rgba(255,255,255,.5)}
@@ -47,12 +47,6 @@
   .segment.sound{background:rgba(6,149,78,.2);border-color:var(--green)}
   .segment .volume-control{position:absolute;top:-60px;left:0;width:100px;padding:4px;background:#151515;border:1px solid rgba(255,255,255,.15);border-radius:8px;display:none}
   .segment:hover .volume-control{display:block}
-  .segment .trim-left, .segment .trim-right{position:absolute;top:50%;width:12px;height:12px;border:2px solid var(--gold);border-width:0 2px 2px 0;transform:rotate(135deg);background:#151515;cursor:ew-resize}
-  .segment .trim-left{left:-6px;transform:rotate(-45deg)}
-  .segment .trim-right{right:-6px}
-  .effects{display:flex;gap:8px;margin-top:10px;flex-wrap:wrap}
-  .effect-btn{padding:6px 10px;border-radius:999px;background:#151515;border:1px solid rgba(255,255,255,.15);cursor:grab;font-size:12px;color:#fff}
-  .effect-btn.active{background:var(--gold);color:#111}
   .effect-item{padding:6px;border-radius:8px;background:rgba(0,0,0,.5);cursor:grab;border:1px solid rgba(255,255,255,.2);margin:5px;position:relative}
   .effect-item .delete{position:absolute;top:-5px;right:-5px;background:var(--red);color:#fff;border-radius:50%;width:15px;height:15px;line-height:15px;text-align:center;cursor:pointer;font-size:10px}
   .deck{position:relative;height:420px;border-radius:16px;overflow:hidden;background:#0f0f10;border:1px solid rgba(255,255,255,.08)}
@@ -71,7 +65,6 @@
   .composer{display:flex;gap:8px;padding:10px;border-top:1px solid rgba(255,255,255,.08);background:#101010}
   .composer input[type="text"]{flex:1;background:#0f0f0f;border:1px solid rgba(255,255,255,.12)}
   .small{font-size:12px;color:var(--muted)} .tip{color:var(--muted);font-size:12px;margin-top:6px}
-  .snap-line{position:absolute;top:0;bottom:0;width:2px;background:rgba(225,191,120,.5);box-shadow:0 0 8px rgba(225,191,120,.8);display:none}
   .photo-grid{display:grid;grid-template-columns:repeat(3, 1fr);gap:10px}
   .photo-slot{width:100%;aspect-ratio:1;background:#151515;border:1px solid rgba(255,255,255,.15);border-radius:8px;display:flex;align-items:center;justify-content:center;cursor:pointer;position:relative}
   .photo-slot img{width:100%;height:100%;object-fit:cover;border-radius:8px}
@@ -106,7 +99,7 @@
           <div class="row" style="align-items:center; justify-content:center; gap:18px; margin-bottom:12px">
             <button class="record-btn" id="recordBtn"><span id="recLabel">Start Recording</span></button>
             <div>
-              <div class="small">Tap to record, edit with effects, keep under 15s.</div>
+              <div class="small">Tap to record, edit with sounds, keep under 15s.</div>
               <div class="tip">Use HTTPS and allow mic permission.</div>
             </div>
           </div>
@@ -126,11 +119,6 @@
             <div class="timeline" id="timeline">
               <canvas id="timelineCanvas"></canvas>
               <div id="segmentsContainer" class="segments-container"></div>
-              <div id="snapLine" class="snap-line"></div>
-            </div>
-            <div class="effects">
-              <button class="effect-btn" data-effect="trim" draggable="true">Trim Clip</button>
-              <button class="effect-btn" data-effect="cut" draggable="true">Cut Clip</button>
             </div>
             <div class="row" style="margin-top:10px">
               <button class="btn" id="recordSoundBtn">Record New Sound</button>
@@ -284,8 +272,10 @@
   }
   async function startRecording() {
     try {
+      recLabel.innerHTML = '<span class="rec-indicator"></span> Recording…';
+      recordBtn.classList.add('recording');
       recMime = supportedMime();
-      recStream = await navigator.mediaDevices.getUserMedia({ audio: true });
+      recStream = await navigator.mediaDevices.getUserMedia({ audio: { sampleRate: 44100, channelCount: 1 } });
       mediaRecorder = new MediaRecorder(recStream, recMime ? { mimeType: recMime } : undefined);
       recChunks = [];
       mediaRecorder.ondataavailable = e => { if (e.data?.size) recChunks.push(e.data); };
@@ -299,9 +289,12 @@
       };
       mediaRecorder.start();
       recording = true;
-      recLabel.innerHTML = '<span class="rec-indicator"></span> Recording…';
-      recordBtn.classList.add('recording');
-    } catch (err) { alert('Mic permission needed. Use HTTPS.'); console.error(err); }
+    } catch (err) {
+      alert('Mic permission needed. Use HTTPS.');
+      console.error(err);
+      recLabel.textContent = 'Start Recording';
+      recordBtn.classList.remove('recording');
+    }
   }
   function stopRecording() {
     if (mediaRecorder && recording) {
@@ -312,7 +305,10 @@
       recordBtn.classList.remove('recording');
     }
   }
-  recordBtn.addEventListener('click', () => recording ? stopRecording() : startRecording());
+  recordBtn.addEventListener('click', () => {
+    if (recording) stopRecording();
+    else startRecording();
+  });
 
   const fmt = s => { s = Math.floor(s); const m = Math.floor(s / 60), r = s % 60; return `${m}:${r.toString().padStart(2, '0')}`; };
   function updateTime(c, d) { time.textContent = `${fmt(c)} / ${d ? fmt(d) : '0:00'}`; }
@@ -348,7 +344,7 @@
 
   /***** AUDIO EDITOR *****/
   let audioCtx, timelineCanvas = $('#timelineCanvas');
-  let segments = []; // [{id, start, duration, buffer, originalBuffer, type: 'main' or 'sound', layer, volume, soundId, isTrimmed}]
+  let segments = []; // [{id, start, duration, buffer, type: 'main' or 'sound', layer, volume, soundId}]
   let sounds = []; // [{id, name, buffer, url}]
   let soundCounter = 0;
   let segmentCounter = 0;
@@ -361,7 +357,7 @@
     const resp = await fetch(url);
     const arrayBuf = await resp.arrayBuffer();
     const buffer = await audioCtx.decodeAudioData(arrayBuf);
-    segments = [{id: segmentCounter++, start: 0, duration: buffer.duration, buffer, originalBuffer: buffer, type: 'main', layer: 2, volume: 1.0, isTrimmed: false}];
+    segments = [{id: segmentCounter++, start: 0, duration: buffer.duration, buffer, type: 'main', layer: 2, volume: 1.0}];
     pushHistory();
     updateSegmentsUI();
     drawWaveform();
@@ -371,7 +367,7 @@
   function pushHistory() {
     history = history.slice(0, historyIndex + 1);
     history.push({
-      segments: JSON.parse(JSON.stringify(segments.map(s => ({...s, buffer: null, originalBuffer: null})))),
+      segments: JSON.parse(JSON.stringify(segments.map(s => ({...s, buffer: null})))),
       sounds: JSON.parse(JSON.stringify(sounds.map(s => ({...s, buffer: null}))))
     });
     historyIndex = history.length - 1;
@@ -392,10 +388,10 @@
     segments = await Promise.all(state.segments.map(async s => {
       if (s.type === 'main') {
         const mainSeg = segments.find(seg => seg.type === 'main') || {buffer: await audioCtx.decodeAudioData(await (await fetch(audioEl.src)).arrayBuffer())};
-        return {...s, buffer: mainSeg.buffer, originalBuffer: mainSeg.buffer};
+        return {...s, buffer: mainSeg.buffer};
       } else {
         const sound = sounds.find(snd => snd.id === s.soundId);
-        return {...s, buffer: sound?.buffer, originalBuffer: sound?.buffer};
+        return {...s, buffer: sound?.buffer};
       }
     }));
     updateSegmentsUI();
@@ -419,10 +415,10 @@
     segments = await Promise.all(state.segments.map(async s => {
       if (s.type === 'main') {
         const mainSeg = segments.find(seg => seg.type === 'main') || {buffer: await audioCtx.decodeAudioData(await (await fetch(audioEl.src)).arrayBuffer())};
-        return {...s, buffer: mainSeg.buffer, originalBuffer: mainSeg.buffer};
+        return {...s, buffer: mainSeg.buffer};
       } else {
         const sound = sounds.find(snd => snd.id === s.soundId);
-        return {...s, buffer: sound?.buffer, originalBuffer: sound?.buffer};
+        return {...s, buffer: sound?.buffer};
       }
     }));
     updateSegmentsUI();
@@ -496,17 +492,6 @@
       volControl.innerHTML = `<input type="range" min="0" max="1" step="0.01" value="${seg.volume}" class="volume-slider">`;
       div.appendChild(volControl);
 
-      if (seg.isTrimmed) {
-        const trimLeft = document.createElement('div');
-        trimLeft.className = 'trim-left';
-        const trimRight = document.createElement('div');
-        trimRight.className = 'trim-right';
-        div.appendChild(trimLeft);
-        div.appendChild(trimRight);
-        makeTrimHandle(trimLeft, seg, 'left', maxDuration);
-        makeTrimHandle(trimRight, seg, 'right', maxDuration);
-      }
-
       container.appendChild(div);
       makeDraggable(div, maxDuration);
       volControl.querySelector('.volume-slider').addEventListener('input', e => {
@@ -520,7 +505,6 @@
   function makeDraggable(el, maxDuration) {
     let startX, startLeft, startTime, isDragging = false, clickTimeout;
     el.addEventListener('mousedown', e => {
-      if (e.target.classList.contains('trim-left') || e.target.classList.contains('trim-right')) return;
       e.stopPropagation();
       clickTimeout = setTimeout(() => {
         isDragging = true;
@@ -537,9 +521,12 @@
         function onUp() {
           if (isDragging) {
             isDragging = false;
-            updateSegmentFromUI(el);
-            drawWaveform();
-            pushHistory();
+            const seg = segments.find(s => s.id == el.dataset.id);
+            if (seg) {
+              seg.start = (parseFloat(el.style.left) / 100) * maxDuration;
+              updatePreview();
+              pushHistory();
+            }
           }
           document.removeEventListener('mousemove', onMove);
           document.removeEventListener('mouseup', onUp);
@@ -569,101 +556,21 @@
     });
   }
 
-  function makeTrimHandle(handle, seg, side, maxDuration) {
-    let startX, startLeft, startWidth;
-    handle.addEventListener('mousedown', e => {
-      e.stopPropagation();
-      startX = e.clientX;
-      startLeft = parseFloat(handle.parentElement.style.left) || 0;
-      startWidth = parseFloat(handle.parentElement.style.width) || 0;
-      let lastX = startX;
-      function onMove(e) {
-        const deltaPct = ((e.clientX - startX) / timelineCanvas.offsetWidth) * 100;
-        if (side === 'left') {
-          const newLeft = Math.max(0, startLeft + deltaPct);
-          handle.parentElement.style.left = `${newLeft}%`;
-          handle.parentElement.style.width = `${startWidth - (newLeft - startLeft)}%`;
-        } else {
-          handle.parentElement.style.width = `${Math.max(0, startWidth + deltaPct)}%`;
-        }
-        requestAnimationFrame(() => lastX = e.clientX);
-      }
-      function onUp() {
-        document.removeEventListener('mousemove', onMove);
-        document.removeEventListener('mouseup', onUp);
-        updateSegmentFromUI(handle.parentElement);
-        drawWaveform();
-        pushHistory();
-      }
-      document.addEventListener('mousemove', onMove);
-      document.addEventListener('mouseup', onUp);
-    });
-  }
-
-  function updateSegmentFromUI(el) {
-    const maxDuration = segments.reduce((max, seg) => Math.max(max, seg.start + seg.duration), 0) || 1;
-    const leftPct = parseFloat(el.style.left) / 100;
-    const widthPct = parseFloat(el.style.width) / 100;
-    const seg = segments.find(s => s.id == el.dataset.id);
-    if (seg) {
-      const oldDuration = seg.duration;
-      const oldStart = seg.start;
-      seg.start = leftPct * maxDuration;
-      seg.duration = widthPct * maxDuration;
-      if (oldDuration !== seg.duration || oldStart !== seg.start) {
-        const startSample = Math.round(seg.start * seg.originalBuffer.sampleRate);
-        const endSample = Math.round((seg.start + seg.duration) * seg.originalBuffer.sampleRate);
-        seg.buffer = sliceBuffer(seg.originalBuffer, startSample, endSample);
-        seg.isTrimmed = true;
-      }
-    }
-    updatePreview();
-  }
-
-  function sliceBuffer(buffer, startSample, endSample) {
-    const durationSamples = Math.max(0, endSample - startSample);
-    if (durationSamples <= 0) return buffer;
-    const newBuffer = audioCtx.createBuffer(buffer.numberOfChannels, durationSamples, buffer.sampleRate);
-    for (let ch = 0; ch < buffer.numberOfChannels; ch++) {
-      newBuffer.copyToChannel(buffer.getChannelData(ch).subarray(startSample, startSample + durationSamples), ch);
-    }
-    return newBuffer;
-  }
-
-  document.querySelectorAll('.effect-btn[data-effect]').forEach(btn => {
-    btn.addEventListener('dragstart', e => {
-      e.dataTransfer.setData('effectType', btn.dataset.effect);
-    });
-  });
-
   function setupTimelineDragDrop() {
     const timeline = $('#timeline');
-    const snapLine = $('#snapLine');
-    let dropLayer = 0;
     timeline.addEventListener('dragenter', e => e.preventDefault());
     timeline.addEventListener('dragover', e => {
       e.preventDefault();
-      const rect = timeline.getBoundingClientRect();
-      const dropX = e.clientX - rect.left;
-      const maxDuration = segments.reduce((max, seg) => Math.max(max, seg.start + seg.duration), 0) || 1;
-      const dropTime = Math.round((dropX / rect.width) * maxDuration * 10) / 10;
-      snapLine.style.left = `${(dropTime / maxDuration) * 100}%`;
-      snapLine.style.display = 'block';
-      dropLayer = Math.floor(e.offsetY / 35);
-      if (dropLayer >= maxLayers) dropLayer = maxLayers - 1;
-    });
-    timeline.addEventListener('dragleave', () => {
-      snapLine.style.display = 'none';
     });
     timeline.addEventListener('drop', async e => {
       e.preventDefault();
-      snapLine.style.display = 'none';
       const soundId = e.dataTransfer.getData('soundId');
-      const effectType = e.dataTransfer.getData('effectType');
       const rect = timeline.getBoundingClientRect();
       const dropX = e.clientX - rect.left;
       const maxDuration = segments.reduce((max, seg) => Math.max(max, seg.start + seg.duration), 0) || 1;
       const dropTime = Math.round((dropX / rect.width) * maxDuration * 10) / 10;
+      const dropLayer = Math.floor(e.offsetY / 35);
+      if (dropLayer >= maxLayers) dropLayer = maxLayers - 1;
 
       if (soundId) {
         const sound = sounds.find(s => s.id == soundId);
@@ -673,63 +580,16 @@
           start: dropTime,
           duration: sound.buffer.duration,
           buffer: sound.buffer,
-          originalBuffer: sound.buffer,
           type: 'sound',
           layer: dropLayer,
           volume: 1.0,
-          soundId,
-          isTrimmed: false
+          soundId
         });
-      } else if (effectType === 'trim') {
-        const seg = segments.find(s => {
-          const segStart = (s.start / maxDuration) * rect.width;
-          const segEnd = ((s.start + s.duration) / maxDuration) * rect.width;
-          return dropX >= segStart && dropX <= segEnd && Math.floor(e.offsetY / 35) === s.layer;
-        });
-        if (!seg) return;
-        seg.isTrimmed = true;
-      } else if (effectType === 'cut') {
-        const seg = segments.find(s => {
-          const segStart = (s.start / maxDuration) * rect.width;
-          const segEnd = ((s.start + s.duration) / maxDuration) * rect.width;
-          return dropX >= segStart && dropX <= segEnd && Math.floor(e.offsetY / 35) === s.layer;
-        });
-        if (!seg) return;
-        const cutTime = dropTime - seg.start;
-        if (cutTime <= 0 || cutTime >= seg.duration) return;
-        const firstDuration = cutTime;
-        const secondDuration = seg.duration - cutTime;
-        const firstBuffer = sliceBuffer(seg.originalBuffer, Math.round(seg.start * seg.originalBuffer.sampleRate), Math.round((seg.start + firstDuration) * seg.originalBuffer.sampleRate));
-        const secondBuffer = sliceBuffer(seg.originalBuffer, Math.round((seg.start + firstDuration) * seg.originalBuffer.sampleRate), Math.round((seg.start + seg.duration) * seg.originalBuffer.sampleRate));
-        segments = segments.filter(s => s.id !== seg.id);
-        segments.push({
-          id: segmentCounter++,
-          start: seg.start,
-          duration: firstDuration,
-          buffer: firstBuffer,
-          originalBuffer: seg.originalBuffer,
-          type: seg.type,
-          layer: seg.layer,
-          volume: seg.volume,
-          soundId: seg.soundId,
-          isTrimmed: seg.isTrimmed
-        }, {
-          id: segmentCounter++,
-          start: seg.start + firstDuration,
-          duration: secondDuration,
-          buffer: secondBuffer,
-          originalBuffer: seg.originalBuffer,
-          type: seg.type,
-          layer: seg.layer,
-          volume: seg.volume,
-          soundId: seg.soundId,
-          isTrimmed: seg.isTrimmed
-        });
+        updateSegmentsUI();
+        drawWaveform();
+        updatePreview();
+        pushHistory();
       }
-      updateSegmentsUI();
-      drawWaveform();
-      updatePreview();
-      pushHistory();
     });
   }
 
@@ -804,11 +664,19 @@
     return arrayBuffer;
   }
 
+  saveEditBtn.addEventListener('click', async () => {
+    if (!window.__recBlob) { alert('No recording to save. Please record a pickup line first.'); return; }
+    const mixedBuffer = await renderMixedBuffer();
+    const blob = await audioBufferToBlob(mixedBuffer);
+    window.__recBlob = blob;
+    go(1);
+  });
+
   let soundRecorder, soundChunks = [], soundStream;
   $('#recordSoundBtn').addEventListener('click', async () => {
     if (!soundRecorder) {
       try {
-        soundStream = await navigator.mediaDevices.getUserMedia({ audio: true });
+        soundStream = await navigator.mediaDevices.getUserMedia({ audio: { sampleRate: 44100, channelCount: 1 } });
         soundRecorder = new MediaRecorder(soundStream);
         soundChunks = [];
         soundRecorder.ondataavailable = e => soundChunks.push(e.data);
@@ -1111,7 +979,7 @@
     if (!chatRec) {
       try {
         chatMime = supportedMime();
-        chatStream = await navigator.mediaDevices.getUserMedia({ audio: true });
+        chatStream = await navigator.mediaDevices.getUserMedia({ audio: { sampleRate: 44100, channelCount: 1 } });
         chatRec = new MediaRecorder(chatStream, chatMime ? { mimeType: chatMime } : undefined);
         chatChunks = [];
         chatRec.ondataavailable = ev => { if (ev.data?.size) chatChunks.push(ev.data); };
@@ -1138,7 +1006,7 @@
     const roomId = activeRoom;
     if (!roomId) return;
     try {
-      const stream = await navigator.mediaDevices.getUserMedia({ audio: true });
+      const stream = await navigator.mediaDevices.getUserMedia({ audio: { sampleRate: 44100, channelCount: 1 } });
       peerConnection = new RTCPeerConnection({ iceServers: [{ urls: 'stun:stun.l.google.com:19302' }] });
       stream.getTracks().forEach(track => peerConnection.addTrack(track, stream));
       const offer = await peerConnection.createOffer();
